# aires

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: build-collector.yml  ci.yml  docs.yml
benchmarks/: RESULTS.md  bench.ts  package.json
docs/: astro.config.mjs
docs/src/content/docs/: index.mdx
docs/src/content/docs/collector/: config.md  otel.md  setup.md
docs/src/content/docs/guides/: architecture.md  benchmarks.md  overview.md  quickstart.md
docs/src/content/docs/reference/: fields.md  proto.md  severity.md
docs/src/content/docs/sdk/python/: install.md  usage.md
docs/src/content/docs/sdk/rust/: config.md  install.md  usage.md
docs/src/content/docs/sdk/typescript/: agents.md  http.md  install.md  logging.md  metrics.md  tracing.md
docs/src/content/docs/storage/: retention.md  schema.md  views.md
docs/src/styles/: custom.css
proto/: aires.proto
